<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.ijustleyxo</groupId>
  <artifactId>console</artifactId>
  <version>0.0.0</version>

  <name>Console</name>
  <url>https://github.com/iJustLeyxo/Console</url>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <finalName>${project.name}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>22</source>
          <target>22</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
           <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>24.0.0</version>
        <scope>compile</scope>
    </dependency>
  </dependencies>
</project>
